--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,7 @@
 
 </head>
 <body class="bg-light ">
-    <div class="bg-white w-75 mx-auto mt-3 rounded d-flex">
+    <div class="bg-white w-75 mx-auto mt-5 rounded d-flex">
         <div class="w-50 p-5 ">
             <h1 class="text-center">Register</h1>
             <form method="post">
@@ -30,10 +30,7 @@
                         {{ form.confirm_password(class="form-control", size=32) }}
                     </div>
                 </div>
-                <div class="form-group">
-                    {{ form.role.label }}<br>
-                    {{ form.role(class="form-control", size=32) }}
-                </div>
+                
                 <div class="form-group d-flex justify-content-between">
                     <p class="mt-1">Already have an account? <a href="{{ url_for('login') }}">Login here</a></p>
                     <p>{{ form.submit(class="btn btn-primary") }}</p>
@@ -52,7 +49,7 @@
         </div>
 
 
-        <div class="w-50 mt-5 pt-5">
+        <div class="w-50  pt-5">
             <img src="{{ url_for('static', filename='images/login.webp') }}" alt="Your Image" class="img-fluid">
         </div>
     
