--- a/templates/home_user.html
+++ b/templates/home_user.html
@@ -3,5 +3,21 @@
 {% block title %}Home User{% endblock %}
 
 {% block content %}
-<h1>Welcome to the home User page, {{ session['username'] }}!</h1>
+<body>
+<div >
+    <p><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 120"><path fill="#0099ff" fill-opacity="1" d="M0,96L24,96C48,96,96,96,144,80C192,64,240,32,288,16C336,0,384,0,432,5.3C480,11,528,21,576,58.7C624,96,672,160,720,170.7C768,181,816,139,864,101.3C912,64,960,32,1008,42.7C1056,53,1104,107,1152,144C1200,181,1248,203,1296,197.3C1344,192,1392,160,1416,144L1440,128L1440,0L1416,0C1392,0,1344,0,1296,0C1248,0,1200,0,1152,0C1104,0,1056,0,1008,0C960,0,912,0,864,0C816,0,768,0,720,0C672,0,624,0,576,0C528,0,480,0,432,0C384,0,336,0,288,0C240,0,192,0,144,0C96,0,48,0,24,0L0,0Z"></path></svg></p>
+    <div class="d-flex justify-content-between" >
+        <div>
+            <h1 class="mb-4" style="color: #0099ff;">Bienvenue, {{ session['username'] }}!</h1>
+            <b style="color: #3d3d3d94;">Bienvenue sur la page d'accueil du partage de fichiers.</b>
+        </div>
+        <div class="w-50 pl-5  d-flex justify-content-evenly"  >
+            <img style="height: 150px;" src="{{ url_for('static', filename='images/upload.png') }}" alt="Your Image" class="img-fluid h-1">
+            <p class="pl-5 pt-3" style="font-family: Georgia, serif;font-style: italic;">Ici les utilisateurs peuvent<br> échanger des fichiers,<br>pour partager un fichier<br>cliquez <a  href="{{ url_for('upload_file') }}">ici</a>.</p>
+        </div>
+        
+    </div>
+    <p><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 270"><path fill="#0099ff" fill-opacity="1" d="M0,128L24,133.3C48,139,96,149,144,170.7C192,192,240,224,288,245.3C336,267,384,277,432,261.3C480,245,528,203,576,165.3C624,128,672,96,720,112C768,128,816,192,864,224C912,256,960,256,1008,229.3C1056,203,1104,149,1152,160C1200,171,1248,245,1296,256C1344,267,1392,213,1416,186.7L1440,160L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z"></path></svg></p>
+</div>
+</body>
 {% endblock %}
