--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Se connecter</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 </head>
@@ -13,7 +13,7 @@
             <img src="{{ url_for('static', filename='images/signup.jpg') }}" alt="Your Image" class="img-fluid h-1">
         </div>
         <div class="w-50 p-5 mt-5">
-            <h1 class="text-center">Login</h1>
+            <h1 class="text-center">Se connecter</h1>
             <form method="post">
                 {{ form.hidden_tag() }}
                 <div class="form-group">
@@ -29,15 +29,7 @@
                     <p class="mt-1">Don't have an account? <a  href="{{ url_for('register') }}">Register here</a></p>
                 </div>
             </form>
-            {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                <ul>
-                {% for category, message in messages %}
-                <li class="{{ category }}">{{ message }}</li>
-                {% endfor %}
-                </ul>
-            {% endif %}
-            {% endwith %}
+            
         </div>
         
     </div>
